fix: dev first iteration

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,1 +1,32 @@
-^LICENSE\.md$
+Makefile
+^build\.xml
+^autotest.r$
+.Rhistory
+\.git/*
+.gitignore
+rcf.Rcheck/*
+..Rcheck/*
+^.*\.Rproj$
+^\.Rproj\.user$
+^\.bumpversion\.cfg
+\.tar\.gz$
+^\.Rprofile$
+\.git$
+builds
+cache
+\.circleci/*
+^\.dockerignore$
+^db$
+^\.vscode$
+docker
+nginx
+jupyter
+\.lintr
+k8s/*
+README\.*
+\.editorconfig
+\.log
+^tests/testthat/_snaps$
+LICENSE\.md
+^CONTRIBUTING\.rst$
+^autotest\.r$
