--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,7 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Collate: 
+    'class.r'
+    'constants.r'
+    'connection.r'
