--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: RConnectionPool
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: DBI Connection Pool
+Version: 0.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Giuseppe", "Acito", , "giuseppe.acito@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-9696-6798"))
+Description: This package provides a Connection Pool class for DBI connections.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
